--- a/web-ui/src/player.css
+++ b/web-ui/src/player.css
@@ -7,13 +7,13 @@
 }
 
 .dim {
-  height:100vh;
-  width:100vw;
-  position:fixed;
-  left:0;
-  top:0;
-  z-index:1 !important;
-  background-color:black;
+  height: 100vh;
+  width: 100vw;
+  position: fixed;
+  left: 0;
+  top: 0;
+  z-index: 1 !important;
+  background-color: black;
   opacity: 0.75;
 }
 
@@ -25,7 +25,8 @@
   top: 0;
   z-index: 1 !important;
   padding: 5px;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
+    Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   color: lightgray;
 }
 
