--- a/web-ui/src/components/container/style.css
+++ b/web-ui/src/components/container/style.css
@@ -13,10 +13,15 @@
 }
 
 .title {
+  min-height: 1.25em;
+  line-height: 1.25em;
   font-size: 1em;
 }
 
 .sourceName {
+  min-height: 1em;
+  line-height: 1em;
   font-size: 0.85em;
+  margin-top: 2px;
   color: gray;
 }
