--- a/web-ui/src/components/root/style.css
+++ b/web-ui/src/components/root/style.css
@@ -1,8 +1,8 @@
 .root {
-  height: 100vh;
+  min-height: 100vh;
   width: 100vw;
-  padding: 10px;
   box-sizing: border-box;
+  padding: 10px;
   background: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)), rgb(40, 220, 220);
   color: lightgray;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
