Convert fallback-cover.png to a react element + emoji
Save 26kb in bundle size

--- a/punchtop-ui-react/src/components/player/style.css
+++ b/punchtop-ui-react/src/components/player/style.css
@@ -1,3 +1,19 @@
+.fallbackCover {
+  height: auto;
+  max-width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  margin: auto;
+  font-size: 10em;
+  background-color: darkgray;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .time {
   width: 100%;
 }
